--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     alt="Self-observation is the first step of inner unfolding" class="img-cover">-->
                     <video id="my-video" poster="./assets/images/194.png" controls width="1602" height="1000" loading="lazy"
                     alt="Self-observation is the first step of inner unfolding" class="img-cover">
-                    <source src="./assets/images/video.mp4" type="video/mp4"/>
+                    <source src="https://firebasestorage.googleapis.com/v0/b/sendoofy-music.appspot.com/o/video.MP4?alt=media&token=8e659232-ac10-4749-8d30-a35ed39671aa" type="video/mp4"/>
                   </video>
                   <button class="play-button"></button>
                 </figure>
